--- a/recipes/chicken-legs.html
+++ b/recipes/chicken-legs.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Crispy Baked Chicken Legs</h1>
-        <img src="../images/chicken-legs.jpg" style="width:30%; height:30%;">
+        <img src="../images/chicken-legs.jpg">
         <h3>Need a quick and easy dinner? Try this quick and easy baked chicken legs recipe !</h3>
 
         <h4>Ingredients</h4>
