--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Easy Homemade Chili</h1>
-        <img src="../images/chili.jpg" style="width:30%; height:30%;">
+        <img src="../images/chili.jpg">
         <h3>This homemade chili is loaded with beef, beans, and crowd-pleasing flavor</h3>
 
         <h4>Ingredients</h4>
