--- a/recipes/lentils-soup.html
+++ b/recipes/lentils-soup.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Lentils Soup</h1>
-        <img src="../images/lentil-soup.jpg" style="width:30%; height:30%;">
+        <img src="../images/lentil-soup.jpg">
         <h3>Hearty lentil soup, chock full of veggies and very yummy. Serve with warm cornbread.</h3>
 
         <h4>Ingredients</h4>
